2023-04-13 create new plugin as per definition. create definition, translation and extension

--- a/custom/plugins/ICTShopFinder/src/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/custom/plugins/ICTShopFinder/src/Resources/views/storefront/layout/footer/footer.html.twig
@@ -2,5 +2,9 @@
 
 {% block layout_footer_navigation_columns %}
     {{ parent() }}
-    {{ dump() }}
+    {% if page.footer.extensions.ict_shop_finder %}
+        {% sw_include '@Storefront/storefront/layout/footer/shop-finder-footer.html.twig' with{
+            'ict_shop_finder': page.footer.extensions.ict_shop_finder
+        } %}
+    {% endif %}
 {% endblock %}
