--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-blog-category/page/sw-blog-category-detail/sw-blog-category-detail.html.twig
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-blog-category/page/sw-blog-category-detail/sw-blog-category-detail.html.twig
@@ -9,11 +9,9 @@
 
         {% endblock %}
 
-
+        {#   Action Buttons     #}
         {% block sw_blog_category_detail_actions %}
             <template #smart-bar-actions>
-
-
                 {% block sw_blog_category_detail_actions_abort %}
                     <sw-button
                         v-tooltip.bottom="tooltipCancel"
@@ -23,7 +21,6 @@
                         {{ $tc('sw-blog-category.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
-
 
                 {% block sw_blog_category_detail_actions_save %}
                     <sw-button-process
@@ -42,7 +39,7 @@
             </template>
         {% endblock %}
 
-
+        {#    Language Selection    #}
         {% block sw_blog_category_detail_language_switch %}
             <template #language-switch>
                 <sw-language-switch
@@ -54,7 +51,7 @@
             </template>
         {% endblock %}
 
-
+        {#    Add/Edit details Form   #}
         {% block sw_blog_category_detail_content %}
             <sw-card-view slot="content">
                 <template v-if="blogCategoryIsLoading">
