--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-blog/page/sw-blog-detail/sw-blog-detail.html.twig
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-blog/page/sw-blog-detail/sw-blog-detail.html.twig
@@ -2,6 +2,7 @@
 {% block sw_blog_detail %}
     <sw-page class="sw-blog-detail">
 
+        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_blog_detail_header %}
             <template #smart-bar-header>
                 <h2>{{ placeholder(blog, 'name', $tc('sw-blog.detail.textHeadline')) }}</h2>
@@ -9,10 +10,12 @@
 
         {% endblock %}
 
-        {# Action Bar #}
+        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+        <!-- Action Bar-->
         {% block sw_blog_detail_actions %}
             <template #smart-bar-actions>
 
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_blog_detail_actions_abort %}
                     <sw-button
                         v-tooltip.bottom="tooltipCancel"
@@ -22,6 +25,8 @@
                         {{ $tc('sw-blog.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
+
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_blog_detail_actions_save %}
                     <sw-button-process
                         v-model="isSaveSuccessful"
@@ -39,7 +44,8 @@
             </template>
         {% endblock %}
 
-        {#  Language Selection #}
+        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+        <!-- Language selection -->
         {% block sw_blog_detail_language_switch %}
             <template #language-switch>
                 <sw-language-switch
@@ -51,47 +57,55 @@
             </template>
         {% endblock %}
 
-        {# Add/Edit details form  #}
+        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_blog_detail_content %}
             <sw-card-view slot="content">
                 <template v-if="blogIsLoading">
                     <sw-skeleton variant="detail-bold" />
                     <sw-skeleton />
                 </template>
-                <template>
+
+                <template v-else>
+
+                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                     {% block sw_blog_detail_content_language_info %}
                         <sw-language-info
                             :entity-description="placeholder(blog, 'name', $tc('sw-blog.detail.textHeadline'))"
                         />
                     {% endblock %}
 
+                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                    <!-- Add/Edit Form -->
                     {% block sw_blog_detail_base_basic_info_card %}
                         <sw-card
                             position-identifier="sw-blog-detail-basic-info"
                             :title="$tc('sw-blog.detail.cardTitleBlogInfo')"
                         >
                             <sw-container
-                                class="sw-manufacturer-detail__container"
+                                class="sw-blog-detail__container"
                                 columns="repeat(auto-fit, minmax(250px, 1fr))"
                                 gap="0 30px"
                             >
-                                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                                {% block sw_blog_detail_base_info_field_name %}
-                                    <sw-field
-                                        v-model="blog.name"
-                                        type="text"
-                                        :label="$tc('sw-blog.detail.labelName')"
-                                        :placeholder="placeholder(blog,'name', $tc('sw-blog.detail.placeholderName'))"
-                                        name="name"
-                                        validation="required"
-                                        required
-                                        :error="blogNameError"
-                                        :disabled="!acl.can('blog.editor')"
-                                    />
-                                {% endblock %}
+                                <div class="sw-blog-detail__base-info-wrapper">
 
-                                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                                {% block sw_blog_detail_base_info_field_author%}
+                                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                                    <!-- Name field -->
+                                    {% block sw_blog_detail_base_info_field_name %}
+                                        <sw-field
+                                            v-model="blog.name"
+                                            type="text"
+                                            :label="$tc('sw-blog.detail.labelName')"
+                                            :placeholder="placeholder(blog, 'name', $tc('sw-blog.detail.placeholderName'))"
+                                            name="name"
+                                            validation="required"
+                                            required
+                                            :error="blogNameError"
+                                            :disabled="!acl.can('blog.editor')"
+                                        />
+                                    {% endblock %}
+                                </div>
+                                <!-- Author field -->
+                                {% block sw_blog_detail_base_info_field_author %}
                                     <sw-field
                                         v-model="blog.author"
                                         type="text"
@@ -105,7 +119,7 @@
                                     />
                                 {% endblock %}
 
-                                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                                <!-- Release Date field -->
                                 {% block sw_blog_detail_base_info_field_release_date %}
                                     <sw-field
                                         v-model="blog.releaseDate"
@@ -120,7 +134,7 @@
                                     />
                                 {% endblock %}
 
-                                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                                <!-- Active field -->
                                 {% block sw_blog_detail_base_info_field_active %}
                                     <sw-switch-field
                                         v-model="blog.active"
@@ -129,26 +143,25 @@
                                 {% endblock %}
                             </sw-container>
 
-                            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                            {% block sw_blog_detail_base_info_field_category%}
+                            <!-- Category selection (Multiple) -->
+                            {% block sw_blog_detail_base_info_field_category %}
                                 <sw-entity-multi-select
-                                    class="sw-blog-form_category-select"
+                                    class="sw-blog-form_product-select"
                                     entity="ict_blog_category"
-                                    :entity-collection="categories"
-                                    :criteria="blogCategoryCriteria"
+                                    :entity-collection="blogCategories"
                                     :label="$tc('sw-blog.detail.labelCategory')"
                                     :placeholder="$tc('sw-blog.detail.placeholderCategory')"
                                     @change="setCategoryIds"
                                     show-clearable-button
                                 />
-
                             {% endblock %}
 
+                            <!-- Product selection (Multiple) -->
                             {% block sw_blog_detail_base_info_field_product %}
                                 <sw-entity-multi-select
                                     class="sw-blog-form_product-select"
                                     entity="product"
-                                    :entity-collection="products"
+                                    :entity-collection="blogProducts"
                                     :label="$tc('sw-blog.detail.labelProduct')"
                                     :placeholder="$tc('sw-blog.detail.placeholderProduct')"
                                     @change="setProductIds"
@@ -156,13 +169,19 @@
                                 />
                             {% endblock %}
 
+                            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                            <!-- Description field -->
                             {% block sw_blog_detail_base_info_field_description %}
                                 <sw-text-editor
                                     v-model="blog.description"
-                                    :placeholder="$tc('sw-blog.detail.placeholderDescription')"
                                     :label="$tc('sw-blog.detail.labelDescription')"
+                                    :placeholder="placeholder(blog, 'description', $tc('sw-blog.detail.placeholderDescription'))"
+                                    name="description"
+                                    sanitize-input
+                                    sanitize-field-name="ict_blog_translation.description"
+                                    :disabled="!acl.can('blog.editor')"
                                 />
-                            {%  endblock %}
+                            {% endblock %}
                         </sw-card>
                     {% endblock %}
                 </template>
