2023-05-02 create data resolver for custom field in product

--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/blocks/commerce/custom-product-video-description-listing/preview/sw-cms-preview-custom-product-video-description-listing.html.twig
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/blocks/commerce/custom-product-video-description-listing/preview/sw-cms-preview-custom-product-video-description-listing.html.twig
@@ -1,5 +1,12 @@
 {% block sw_cms_block_custom_product_video_description_listing_preview %}
     <div class="sw-cms-preview-custom-product-video-description-listing">
+        <div class="sw-cms-preview-custom-product-video-description__image">
+            <img
+                :src="'/administration/static/img/cms/preview_mountain_small.jpg' | asset"
+                alt=""
+            >
+        </div>
+        <div class="sw-cms-preview-custom-product-video-description__image__overlay"></div>
         <div class="sw-cms-preview-custom-product-video-description-listing__content">
             <div class="sw-cms-preview-custom-product-video-description-listing__text">
                 <p>I served as administrator of the Royal Navy and Member of Parliament. </p>
