--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/component/sw-cms-custom-product-video-description-preview/sw-cms-custom-product-video-description-preview.scss
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/component/sw-cms-custom-product-video-description-preview/sw-cms-custom-product-video-description-preview.scss
@@ -4,7 +4,7 @@
     align-items: center;
     align-content: stretch;
     padding: 0;
-    grid-template-columns: 1fr 1fr;
+    //grid-template-columns: 1fr 1fr;
     grid-column-gap: 10px;
 
     .sw-cms-custom-product-video-description-preview-youtube-video {
