--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/component/sw-cms-custom-product-video-description-preview/sw-cms-custom-product-video-description-preview.html.twig
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/component/sw-cms-custom-product-video-description-preview/sw-cms-custom-product-video-description-preview.html.twig
@@ -1,20 +1,8 @@
 {% block sw_cms_custom_product_video_description_preview %}
     <div class="sw-cms-custom-product-video-description-preview">
-
-        <div class="sw-cms-custom-product-video-description-preview__video">
-            <img
-                class="sw-cms-custom-product-video-description-preview-youtube-video__img"
-                :src="'/administration/static/img/cms/preview_youtube.jpg' | asset"
-                alt=""
-            >
-            <img
-                class="sw-cms-custom-product-video-description-preview-youtube-video__icon"
-                :src="'/administration/static/img/cms/youtube-icon.png' | asset"
-                alt=""
-            >
-        </div>
         <div class="sw-cms-custom-product-video-description-preview__description">
-            This is custom product video and description...
+            <h3>Product custom field</h3>
+            This is custom product description...
         </div>
     </div>
 {% endblock %}
