--- a/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/elements/custom-product-video-description/component/sw-cms-el-custom-product-video-description.html.twig
+++ b/custom/plugins/ICTBlog/src/Resources/app/administration/src/module/sw-cms/elements/custom-product-video-description/component/sw-cms-el-custom-product-video-description.html.twig
@@ -7,7 +7,10 @@
                 v-if="!isProductPageType || currentDemoEntity"
                 class="sw-cms-el-product-description-reviews__detail"
             >
-                <div class="sw-cms-el-product-description-reviews__detail-description">
+                <h3 class="sw-cms-el-custom-product-video-description__detail-title">
+                    {{ placeholder(product, 'name', product.name) }}
+                </h3>
+                <div class="sw-cms-el-custom-product-video-description__detail-description">
                     {{ placeholder(product, 'customFields.custom_product_video_description_video_description_first', product.customFields.custom_product_video_description_video_description_first) }}
                 </div>
             </div>
