--- a/custom/plugins/ICTECHBackendLoginByOTP/src/Resources/app/administration/src/module/sw-login/view/sw-login-login/sw-login-login.html.twig
+++ b/custom/plugins/ICTECHBackendLoginByOTP/src/Resources/app/administration/src/module/sw-login/view/sw-login-login/sw-login-login.html.twig
@@ -39,7 +39,12 @@
         {% block sw_login_login_submit %}
             <div class="sw-login__submit">
                 {% block sw_login_login_forgot_password %}
-
+                    <router-link
+                        :to="{ name: 'sw.verify.verify' }"
+                        class="sw-login__forgot-password-action"
+                    >
+                        {{ $tc('sw-login.index.forgottenPasswordLink') }}
+                    </router-link>
                 {% endblock %}
                 {% block sw_login_login_submit_button %}
                     <sw-button
@@ -53,4 +58,5 @@
             </div>
         {% endblock %}
     </form>
+
 {% endblock %}
